Add relative path settings

--- a/nest-pet-project/.vscode/settings.json
+++ b/nest-pet-project/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-  "git.openRepositoryInParentFolders": "always",
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
